// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"doc => {
  return doc.name === name;
};"
`;

exports[` 2`] = `
"doc => {
  return doc.favorites && series.every(value => doc.favorites.indexOf(value) >= 0) && doc.name === name;
};"
`;

exports[` 3`] = `
"doc => {
  return doc.favorites && series.every(value => doc.favorites.indexOf(value) >= 0) || doc.name === name;
};"
`;
